--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ main {
     justify-content: center;
     gap: 30px;
     position: relative;
-    background-image: url('./assets/Venom.jpg');
+    background-image: url('../assets/Venom.jpg');
     background-size: cover;
     background-position: center;
     opacity: 0;
