--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ main::before {
     color: #4CAF50;
 }
 
-#tela {
+#screen {
     border: 3px solid var(--second-color);
     box-shadow: 0 0 20px #ffffff4d;
     background-color: #808080;
